# kimiconfig

./: README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
src/kimiconfig/: __init__.py  config.py  test.py
tests/: __init__.py  test.yaml  test_config.py
